<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardBackgroundColor="#33BBD8EF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/itemname"
                android:layout_marginStart="8dp"
                android:layout_weight="1"/>

<!--            <TextView-->
<!--                android:id="@+id/item_date"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/itemdate"-->
<!--                android:layout_weight="1"/>-->

            <TextView
                android:id="@+id/item_cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/itemcost"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/remove_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove"
                android:background="#ff0000"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="11sp"
                android:focusable="false"
                android:focusableInTouchMode="false"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>